--- a/README
+++ b/README
@@ -1,9 +1,8 @@
 Hi Team,
 
-I will start working the this tonight.
-I have been under the weather for awhile.
-I hope to complete by tomorrow or before the deadline.
+I will start working this tonight.
+I have been under the weather for a while.
+I hope to complete it by tomorrow or before the initial deadline.
 
-Best regards.
-
+Best regards,
 Kingsley Kanu
