--- a/README
+++ b/README
@@ -1,8 +1,10 @@
 Hi Team,
 
-I will start working this tonight.
-I have been under the weather for a while.
-I hope to complete it by tomorrow or before the initial deadline.
+Given I am still working on the API challenge.
+And the file numbering is no the best practice
+But I had to use it to prioritise the proccessing.
+Then it could be made better if I go on to add environment variable settings
+
 
 Best regards,
 Kingsley Kanu
