--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Hi Team,
 
 Given I am still working on the API challenge.
-And the file numbering is no the best practice
+And the file naming is not the best practice
 But I had to use it to prioritise the proccessing.
 Then it could be made better if I go on to add environment variable settings
 
